solved responsive issue with the too large data table on documentation (this is only shown on desktop now)

--- a/static/css/css_template/css/custom.css
+++ b/static/css/css_template/css/custom.css
@@ -6794,3 +6794,17 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+
+.mobile-show {
+    display:none;
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+    .mobile-hide {
+	display:none;
+    }
+    .mobile-show {
+	display:block;
+	color:orange;
+    }
+}
